Fix distorted UI on checkbox/radio/toggle with long label

--- a/quasar/src/components/radio/radio.styl
+++ b/quasar/src/components/radio/radio.styl
@@ -38,6 +38,7 @@ $radio-transition = .22s cubic-bezier(0,0,.2,1) 0ms
 
   &__inner
     width 40px
+    min-width 40px
     height 40px
     padding 10px
     outline 0
