--- a/quasar/src/components/toggle/toggle.styl
+++ b/quasar/src/components/toggle/toggle.styl
@@ -41,6 +41,7 @@ $toggle-transition = .22s cubic-bezier(.4,0,.2,1)
 
   &__inner
     width 56px
+    min-width 56px
     height 40px
     padding 13px 12px
 
